--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <button id="playPauseButton" class="play-pause"></button>
   <div class="startSign">
     <p class="two">温馨提醒：佩戴耳机并点击右上角音乐播放可获得最佳体验哦😊</p>
+    <p>
+      <img src="img/lydia.png" alt="Happy Birthday Xiaosong" style="width: 547px; height: 142px;">
+    </p>
     <!-- 开始按钮 -->
     <p id="startButton" class="two button">准备好了，我们开始吧！</p>
   </div>
